<resources>
    <!-- Other strings -->
    <string name="app_name">DK Finance</string>
    <string name="verification_successful">Verification Successful</string>
    <string name="loan_status">Loan Status</string>
    <string name="accepted_loans">Accepted Loans</string>
    <string name="rejected_loans">Rejected Loans</string>
    <string name="new_registration">New Registration</string>
    <string name="stats_and_graph">Stats and Graph</string>

    <string-array name = "yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="addDocs">
        <item>Select more documents</item>
        <item>PAN Card</item>
        <item>Voter ID Card</item>
        <item>Driving License</item>
        <item>Passport</item>
        <item>Form 60</item>
        <!-- Add more items here -->
    </string-array>

    <!-- Gender Options -->
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <!-- Religion Options -->
    <string-array name="religion_options">
        <item>Hinduism</item>
        <item>Islam</item>
        <item>Christianity</item>
        <!-- Add more religion options as needed -->
    </string-array>

    <!-- Marital Status Options -->
    <string-array name="marital_status_options">
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widowed</item>
        <!-- Add more marital status options as needed -->
    </string-array>

    <!-- Residential Status Options -->
    <string-array name="residential_status_options">
        <item>Owned</item>
        <item>Rented</item>
        <item>Living with Parents</item>
        <!-- Add more residential status options as needed -->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="open_account">Open Account</string>
    <string name="lead_number">lead number</string>
    <string name="status">status</string>

    <!-- Product Option -->
    <string-array name="product_types_array">
        <item>Normal</item>

    </string-array>
    <string-array name="case_tag">
        <item>Normal</item>

    </string-array>
    <string-array name="customer_type">
        <item>Normal</item>
        <!--        <item>Loan</item>-->
    </string-array>
    <!-- Create Customer Option -->

    <string-array name="transaction_type">
        <item>Purchase</item>
        <item>Refinance</item>
        <item>Construction</item>
        <!--        <item>Loan</item>-->
    </string-array>

    <string-array name="gender_type">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="title_type">
        <item>Mr</item>
        <item>Ms</item>
        <item>Miss</item>
        <item>Mrs</item>
    </string-array>

    <string-array name="customer_segment">
        <item>Self-Employed Professional</item>
    </string-array>

    <string-array name="education_qualification">
        <item>Uneducated</item>
        <item>Below 10th</item>
        <item>Secondary</item>
        <item>M. Tech</item>
        <item>Senior Secondary</item>
        <item>ITI Technical Degree</item>
        <item>Graduation</item>
        <item>Post Graduation</item>
    </string-array>

    <string-array name="application_roles">
        <item>Applicant</item>
        <item>Co-Applicant</item>
    </string-array>

    <string-array name="residenceOwner">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="agricultureLandOwner">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="residence_state">
        <item>Owned</item>
        <item>Rented</item>
    <item>Parented</item>
    <item>Spouse Owned</item>
    <item>Company</item>
    <item>Govt Provided</item>
    </string-array>

    <string-array name="residence_type">
        <item>Independent House</item>
        <item>Flat</item>
        <item>Slum</item>
        <item>Chawl</item>
        <item>Kucha House</item>
        <item>Others</item>

    </string-array>

    <string-array name="collateral_type">
        <item>Property</item>
        <item>Automobile</item>
        <item>Deposit</item>
        <item>Financial Security</item>
        <item>Plant and Machinery</item>
        <item>Insurance</item>
        <item>Gold</item>
    </string-array>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="charges_type_processing_fees">Charges Type (Processing Fees)</string>
    <string name="charges_type_valuation_charges">Charges Type (Valuation Charges)</string>
    <string name="charges_type_legal_and_incidental_fee">Charges Type (Legal and incidental fee)</string>
    <string name="charges_type_stamp_duty">Charges Type (Stamp Duty)</string>
    <string name="charges_type_rcu_charges">Charges Type (Rcu Charges)</string>
    <string name="charges_type_stamping_expenses">Charges Type (Stamping expenses)</string>
    <string name="loan_details">Loan Details</string>
    <string name="no_applications_available">No applications available</string>

</resources>
