<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Box at the top of the screen -->
    <RelativeLayout
        android:id="@+id/topBox"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="#1A7A306c"
        android:padding="20dp"
        android:paddingTop="20dp">

        <!-- Home button on the left -->
        <ImageView
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_add_home_24"
            android:background="@drawable/home_button_background"/>

        <!-- Text and ID in the center -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/applicationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="Application ID"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/applicationID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        app:cardElevation="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:overScrollMode="never">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:background="@color/white"
                android:elevation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="@string/loan_details"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginBottom="18dp"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="Product Type"
                    android:textSize="16sp"
                    android:gravity="start"
                    tools:ignore="HardcodedText" />
                <Spinner
                    android:id="@+id/productType"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_spinner_background"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:hint="Select"
                    android:popupBackground="@color/white"
                    android:overlapAnchor="false"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="Case Tag"
                    android:layout_marginTop="15dp"
                    android:textSize="16sp"
                    android:gravity="start" />
                <Spinner
                    android:id="@+id/caseTag"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_spinner_background"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:hint="Select"
                    android:popupBackground="@color/white"
                    android:overlapAnchor="false"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="Customer type"
                    android:layout_marginTop="15dp"
                    android:textSize="16sp"
                    android:gravity="start" />
                <Spinner
                    android:id="@+id/customerType"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_spinner_background"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:hint="Select"
                    android:popupBackground="@color/white"
                    android:overlapAnchor="false"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="Agent code"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:gravity="start"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/agentCode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_border_fixed"
                    android:drawablePadding="8dp"
                    android:text="DKFE001"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="Branch Code"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:gravity="start"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/branchCode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_border_fixed"
                    android:drawablePadding="8dp"
                    android:text="DKF001"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:editable="false"
                    android:focusable="false"
                    tools:ignore="Deprecated"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="Applied Loan Amount"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:gravity="start"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/loanAmount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_border"
                    android:digits="0123456789"
                    android:drawablePadding="8dp"
                    android:elevation="4dp"
                    android:inputType="phone"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:maxLength="15"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="Applied Tenure"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:gravity="start" />

                <EditText
                    android:id="@+id/appliedTenure"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_border"
                    android:digits="0123456789"
                    android:drawablePadding="8dp"
                    android:elevation="4dp"
                    android:inputType="phone"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:maxLength="15"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="Applied ROI"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:gravity="start" />

                <EditText
                    android:id="@+id/appliedRoi"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_border"
                    android:digits="0123456789"
                    android:drawablePadding="8dp"
                    android:elevation="4dp"
                    android:inputType="phone"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:maxLength="15"/>

                <!-- Processing Fees Section -->
                <TextView
                    android:id="@+id/label_processing_fees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charges_type_processing_fees"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="20dp" />

                <include
                    android:id="@+id/section_processing_fees"
                    layout="@layout/charges_type_layout" />

                <!-- Valuation Charges Section -->
                <TextView
                    android:id="@+id/label_valuation_charges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charges_type_valuation_charges"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="20dp" />

                <include
                    android:id="@+id/section_valuation_charges"
                    layout="@layout/charges_type_layout" />

                <!-- Legal and Incidental Fee Section -->
                <TextView
                    android:id="@+id/label_legal_incidental_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charges_type_legal_and_incidental_fee"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="20dp" />

                <include
                    android:id="@+id/section_legal_incidental_charges"
                    layout="@layout/charges_type_layout" />

                <!-- Stamp Duty Charges Section -->
                <TextView
                    android:id="@+id/label_stamp_duty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charges_type_stamp_duty"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="20dp" />

                <include
                    android:id="@+id/section_stamp_duty_charges"
                    layout="@layout/charges_type_layout" />


                <!-- RCU Charges Section -->
                <TextView
                    android:id="@+id/label_rcu_charges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charges_type_rcu_charges"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="20dp" />

                <include
                    android:id="@+id/section_rcu_charges"
                    layout="@layout/charges_type_layout" />


                <!-- Stamping Charges Section -->
                <TextView
                    android:id="@+id/label_stamping_charges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charges_type_stamping_expenses"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="20dp" />

                <include
                    android:id="@+id/section_stamping_charges"
                    layout="@layout/charges_type_layout" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/save_button"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"
            android:text="SAVE"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/primary"
            android:text="SUBMIT"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>